# layout-spacial-resoning

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
cluster/: README.md  layout_local_hf_matrix_val.sbatch  layout_local_hf_val.sbatch  layout_vllm_api_val.sbatch  layout_vllm_api_val_test.sbatch  layout_vllm_api_val_test_2gpu.sbatch
configs/: experiment.yaml  graph_method.yaml  models.yaml
demo/: streamlit_app.py
experiments/: audit_control_lists.py  build_dataset.py  build_fine_tuning_data.py  build_lora_splits.py  build_silver_layouts.py  check_lora_model_compatibility.py  diagnose_experiment_results.py  extract_order_constraints.py  generate_report_tables.py  inspect_lora_data.py  render_silver_layout_gallery.py  retry_failed_silver_layouts.py  run_all_methods.py  run_evaluation.py  run_fine_tuned_model.py  run_full_experiment.py  run_hybrid.py  run_llm_multi_agent.py  run_llm_single.py  run_statistical_tests.py  run_validation.py  summarize_silver_layouts.py  summarize_split_distributions.py  sweep_graph_threshold.py  train_lora.py
tests/: test_config.py  test_dataset_io.py  test_demo_app.py  test_embeddings.py  test_fine_tuned_model.py  test_full_experiment.py  test_graph_community.py  test_grid_constraints.py  test_html_renderer.py  test_hybrid.py  test_llm_multi_agent.py  test_llm_providers.py  test_llm_single.py  test_lora_training.py  test_methods_smoke.py  test_metrics.py  test_order_extractor.py  test_orphan_field.py  test_reading_order.py  test_row_underutilization.py  test_schema_validation.py  test_section_boundary.py  (+3 more)
(+61 files in other folders)
