[project]
name = "layout-spacial-resoning"
version = "0.1.0"
description = "Experimental pipeline for comparing form layout generation methods."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "igraph>=1.0.0",
    "jinja2>=3.1.6",
    "leidenalg>=0.11.0",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "numpy>=2.4.5",
    "openai>=2.37.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

[project.scripts]
layout-spatial-reasoning = "layout_spatial_reasoning.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
